<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center"
            android:layout_width="@dimen/dp_250"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textSize="@dimen/sp_22"
                android:layout_marginTop="@dimen/dp_15"
                android:textColor="@color/black"
                android:text="@string/congratulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginVertical="@dimen/dp_10"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:gravity="center_horizontal"
                android:textSize="@dimen/sp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/black"
                android:text="@string/you_ve_completed_all_the_spelling_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginTop="@dimen/sp_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/grey1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="@dimen/sp_16"
                android:id="@+id/bt_ok"
                android:textColor="@color/blue"
                android:text="@string/ok"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</RelativeLayout>