<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".activities.About"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:foreground="@drawable/bt_circle_hover"
            android:id="@+id/bt_back"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:src="@mipmap/ic_back"
             />
        <TextView
            android:layout_centerVertical="true"
            android:fontFamily="@font/regular"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/about"
            android:textSize="@dimen/sp_20"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:paddingHorizontal="@dimen/dp_15"
        android:id="@+id/rl_privacy"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_15">
        <TextView
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white"/>
    <RelativeLayout
        android:paddingHorizontal="@dimen/dp_15"
        android:id="@+id/rl_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_15">
        <TextView
            android:text="@string/term_of_services"
            android:textColor="@color/white"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white"/>
    <RelativeLayout
        android:paddingHorizontal="@dimen/dp_15"
        android:id="@+id/rl_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_15">
        <TextView
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white"/>
    <RelativeLayout
        android:paddingHorizontal="@dimen/dp_15"
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_15">
        <TextView
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:id="@+id/tv_version"
        android:fontFamily="@font/italic"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        android:layout_gravity="center_horizontal"/>
</androidx.appcompat.widget.LinearLayoutCompat>