<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.EditProfile"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:foreground="@drawable/bt_circle_hover"
            android:id="@+id/bt_back"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:src="@mipmap/ic_back"
            app:tint="@color/black" />
        <TextView
            android:layout_centerVertical="true"
            android:fontFamily="@font/regular"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:text="@string/my_profile"
            android:textSize="@dimen/sp_20"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_15"
                android:background="@drawable/bg_yellow_big"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_240"
                android:orientation="vertical">
                <TextView
                    android:fontFamily="@font/regular"
                    android:textColor="@color/white"
                    android:text="@string/choose_a_friend"
                    android:textSize="@dimen/sp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/img_pf_boy"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_120"/>
                    <ImageView
                        android:src="@mipmap/img_pf_girl"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_120"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <RadioGroup
                    android:checkedButton="@id/rb_gudo"
                    android:id="@+id/rg_friend"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_gudo"
                        android:button="@drawable/custom_bt_radius"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:gravity="center"
                        android:background="@drawable/bg_radius_blue"
                        android:text="@string/gudo"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:fontFamily="@font/regular"
                        android:layout_width="@dimen/dp_90"
                        android:layout_height="@dimen/dp_35"/>
                    <RadioButton
                        android:id="@+id/rb_roza"
                        android:button="@drawable/custom_bt_radius"
                        android:layout_marginStart="@dimen/dp_15"
                        android:gravity="center"
                        android:background="@drawable/bg_radius_blue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:fontFamily="@font/regular"
                        android:text="@string/roza"
                        android:layout_width="@dimen/dp_90"
                        android:layout_height="@dimen/dp_35"/>
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:padding="@dimen/dp_15"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/bg_blue"
                android:layout_height="@dimen/dp_120">
                <TextView
                    android:fontFamily="@font/regular"
                    android:textColor="@color/white"
                    android:text="@string/choose_age_group"
                    android:textSize="@dimen/sp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:checkedButton="@id/rb_low"
                    android:id="@+id/rg_age"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_low"
                        android:gravity="center"
                        android:background="@drawable/bg_radius_orange"
                        android:button="@drawable/custom_bt_radius"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:text="@string/_03_05"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:fontFamily="@font/regular"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_35"/>
                    <RadioButton
                        android:id="@+id/rb_high"
                        android:gravity="center"
                        android:background="@drawable/bg_radius_orange"
                        android:button="@drawable/custom_bt_radius"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:fontFamily="@font/regular"
                        android:text="@string/_06_12"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_35"/>
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:padding="@dimen/dp_15"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/bg_yellow_big"
                android:layout_height="@dimen/dp_115">
                <TextView
                    android:fontFamily="@font/regular"
                    android:textColor="@color/white"
                    android:text="@string/your_name"
                    android:textSize="@dimen/sp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    app:hintEnabled="false"
                    android:background="@drawable/edt_bg_white"
                    app:endIconMode="clear_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:paddingHorizontal="@dimen/dp_10"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/blue1"
                        android:gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:hint="@string/your_name"
                        android:inputType="textCapWords"
                        android:fontFamily="@font/regular"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/bg_blue"
                android:layout_height="@dimen/dp_120">
                <TextView
                    android:fontFamily="@font/regular"
                    android:textColor="@color/white"
                    android:text="@string/gender"
                    android:textSize="@dimen/sp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:checkedButton="@id/rb_male"
                    android:id="@+id/rg_gender"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_male"
                        android:gravity="center"
                        android:background="@drawable/bg_radius_orange"
                        android:button="@drawable/custom_bt_radius"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:text="@string/male"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:fontFamily="@font/regular"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_35"/>
                    <RadioButton
                        android:id="@+id/rb_female"
                        android:gravity="center"
                        android:background="@drawable/bg_radius_orange"
                        android:button="@drawable/custom_bt_radius"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:fontFamily="@font/regular"
                        android:text="@string/female"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_35"/>
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginBottom="@dimen/dp_10"
                android:id="@+id/bt_save"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:textColor="@color/white"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/save"
                android:background="@drawable/bt_bg_blue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>